<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.com.bit01.numerologiabasenueve.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PedirDatos_btnFecha"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="67dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="17dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PedirDatos_txtfecha"
        android:textSize="18sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/lblFechaG"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@+id/btnFecha"
        android:layout_marginRight="11dp" />

    <TextView
        android:id="@+id/lblFechaG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PedirDatos_fechaNo"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="36dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PedirDatos_txtNombre"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/ETNombre"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/btnFecha"
        android:layout_marginRight="15dp" />

    <EditText
        android:id="@+id/ETNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PedirDatos_ejNombre"
        android:inputType="textPersonName"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="36dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="49dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PedirDatos_txtApellido"
        android:textSize="18sp"
        android:layout_marginEnd="15dp"
        app:layout_constraintRight_toLeftOf="@+id/ETApellido"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/ETApellido"
        android:layout_marginBottom="11dp"
        android:layout_marginRight="25dp" />

    <EditText
        android:id="@+id/ETApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PedirDatos_ejApellido"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/ETNombre"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/ETNombre"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ETNombre"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:text="@string/PedirDatos_Calcular"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/ETApellido"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ETApellido"
        android:layout_marginLeft="34dp" />

</android.support.constraint.ConstraintLayout>
